# pygol

./: .pylintrc  README.md  pyproject.toml
pygol/: __init__.py  __main__.py  abstract_grid.py  set_grid.py  vector_grid.py
src/pygol/: __init__.py  __main__.py
