[tool.poetry]
name = "pygol"
version = "0.1.0"
authors = ["Ilya Savitsky <ipsavitsky234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
raylib = "^5.0.0"

[tool.poetry.dev-dependencies]
pylint = "^3.1.0"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
